k8s/apps/repo-account/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: repo-account
  namespace: apps
  labels:
    app: repo-account
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: repo-account
                port:
                  number: 8080
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: repo-account
                port:
                  number: 8080
